上海疫情实时追踪完成

--- a/templates/main.html
+++ b/templates/main.html
@@ -141,20 +141,26 @@
                     <span style="color: #000000;text-align: center;font-size: 40px;display: flex;align-items: center;justify-content: center;">
                         全国疫情实时追踪
                     </span>
-
                 </a>
                 <ul class="dropdown-menu" style="background: #cccccc;width: 40%;top: 50px;left: 30%;">
                     <li style="background: #cccccc;">
-                        <a href="{% url 'china' %}">
+                        <a href="{% url 'main' %}">
                             <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
-                                实时追踪
+                                全国疫情实时追踪
                             </span>
                         </a>
                     </li>
                     <li style="background: #cccccc;">
                         <a href="{% url 'china' %}">
                             <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
-                                完整过程
+                                全国疫情完整过程
+                            </span>
+                        </a>
+                    </li>
+                    <li style="background: #cccccc;">
+                        <a href="{% url 'shanghai' %}">
+                            <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
+                                上海疫情实时追踪
                             </span>
                         </a>
                     </li>
