--- a/templates/shanghai.html
+++ b/templates/shanghai.html
@@ -29,7 +29,8 @@
                 right: 2%;
                 top: 5%;
                 color: #000000;
-                font-size: 20px;
+                font-size: 24px;
+                font-family: "myfonts";
             }
             #c1 {
                 position: absolute;
@@ -137,7 +138,7 @@
 	</head>
 	<body>
 		<div id="gyroContain">
-            <li class="dropdown" style="width: 40%;height: 0;top: 0;left: 30%;display: inline-block;">
+            <li class="dropdown" style="width:50%;height: 0;top: 0;left: 25%;display: inline-block;">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     <span style="color: #000000;text-align: center;font-size: 40px;display: flex;align-items: center;justify-content: center;">
                         上海疫情实时追踪
@@ -162,6 +163,13 @@
                         <a href="{% url 'shanghai' %}">
                             <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
                                 上海疫情实时追踪
+                            </span>
+                        </a>
+                    </li>
+                    <li style="background: #cccccc;">
+                        <a href="{% url 'world' %}">
+                            <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
+                                全球疫情模拟过程
                             </span>
                         </a>
                     </li>
@@ -550,14 +558,10 @@
                 get_l1_data()
                 get_l2_data()
 
-                {#setInterval(gettime,1000) // 1秒刷一次#}
-                // setInterval(get_c1_data,1000*10) // 10秒刷一次
-                // setInterval(get_c2_data,10000*10) // 100秒刷一次
-                // setInterval(get_l1_data,10000*10) // 100秒刷一次
-                // setInterval(get_l2_data,10000*10) // 100秒刷一次
-                // setInterval(get_r1_data,10000*10) // 100秒刷一次
-                // setInterval(get_r2_data,10000*10) // 100秒刷一次
-
+                setInterval(gettime,1000) // 1秒刷一次
+                setInterval(get_c2_data,1000*10) // 10秒刷一次
+                setInterval(get_l1_data,1000*10) // 10秒刷一次
+                setInterval(get_l2_data,1000*10) // 10秒刷一次
             </script>
 		</div>
 	</body>
