页面重新布局

--- a/templates/main.html
+++ b/templates/main.html
@@ -166,6 +166,13 @@
                         </a>
                     </li>
                     <li style="background: #cccccc;">
+                        <a href="{% url 'worldnow' %}">
+                            <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
+                                全球疫情实时追踪
+                            </span>
+                        </a>
+                    </li>
+                    <li style="background: #cccccc;">
                         <a href="{% url 'world' %}">
                             <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
                                 全球疫情模拟过程
