--- a/templates/shanghai.html
+++ b/templates/shanghai.html
@@ -145,35 +145,42 @@
                     </span>
                 </a>
                 <ul class="dropdown-menu" style="background: #cccccc;width: 40%;top: 50px;left: 30%;">
-                    <li style="background: #cccccc;">
-                        <a href="{% url 'main' %}">
-                            <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
-                                全国疫情实时追踪
-                            </span>
-                        </a>
-                    </li>
-                    <li style="background: #cccccc;">
-                        <a href="{% url 'china' %}">
-                            <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
-                                全国疫情完整过程
-                            </span>
-                        </a>
-                    </li>
-                    <li style="background: #cccccc;">
-                        <a href="{% url 'shanghai' %}">
-                            <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
-                                上海疫情实时追踪
-                            </span>
-                        </a>
-                    </li>
-                    <li style="background: #cccccc;">
-                        <a href="{% url 'world' %}">
-                            <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
-                                全球疫情模拟过程
-                            </span>
-                        </a>
-                    </li>
-                </ul>
+    <li style="background: #cccccc;">
+        <a href="{% url 'main' %}">
+            <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
+                全国疫情实时追踪
+            </span>
+        </a>
+    </li>
+    <li style="background: #cccccc;">
+        <a href="{% url 'china' %}">
+            <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
+                全国疫情完整过程
+            </span>
+        </a>
+    </li>
+    <li style="background: #cccccc;">
+        <a href="{% url 'shanghai' %}">
+            <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
+                上海疫情实时追踪
+            </span>
+        </a>
+    </li>
+    <li style="background: #cccccc;">
+        <a href="{% url 'worldnow' %}">
+            <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
+                全球疫情实时追踪
+            </span>
+        </a>
+    </li>
+    <li style="background: #cccccc;">
+        <a href="{% url 'world' %}">
+            <span style="color: #000000;text-align: center;font-size: 40px; display: flex;align-items: center;justify-content: center;">
+                全球疫情模拟过程
+            </span>
+        </a>
+    </li>
+</ul>
             </li>
 			<div id="tim"></div>
 			<div id="l1">l1</div>
