配置apache完成，页面显示加入学号姓名

--- a/templates/shanghai.html
+++ b/templates/shanghai.html
@@ -400,7 +400,7 @@
                         dataType:'json',
                         success: function(data) {
                             // console.log("gettime data",data)
-                            $("#tim").html(data)
+                            $("#tim").html('18120255姚施越\t'+data)
                         },
                         error: function(xhr, type, errorThrown) {
 
